--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_main"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/rootFragment">
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.mylibrary.view.home.HomeFragment"
+        android:name="com.example.mylibrary.view.root.home.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home"/>
+    <fragment
+        android:id="@+id/rootFragment"
+        android:name="com.example.mylibrary.view.root.RootFragment"
+        android:label="RootFragment"
+        tools:layout="@layout/fragment_root"/>
 </navigation>
