--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -10,6 +10,12 @@
             type="com.example.mylibrary.data.dto.response.Book" />
     </data>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="8dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_ihome_container"
         android:layout_width="match_parent"
@@ -18,42 +24,84 @@
 
         <ImageView
             android:id="@+id/img_ihome"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toStartOf="@id/guide_ihome_start"
-            app:layout_constraintEnd_toEndOf="@id/guide_ihome_end"
+            android:layout_width="108dp"
+            android:layout_height="144dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             bind:bookImage="@{book.image}"
-            tools:background="@color/black"/>
+            tools:background="@color/secondaryDarkColor" />
 
         <TextView
             android:id="@+id/text_ihome_title"
-            android:layout_width="wrap_content"
+            style="@style/Title"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/img_ihome"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
             app:layout_constraintEnd_toEndOf="parent"
             bind:titleFilter="@{book.title}"
             tools:text="미움 받을 용기"/>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_ihome_start"
+        <TextView
+            android:id="@+id/text_ihome_label_publisher"
+            style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.25"/>
+            android:text="@string/text_ihome_label_publisher"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            app:layout_constraintTop_toBottomOf="@id/text_ihome_title"/>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_ihome_end"
+        <TextView
+            android:id="@+id/text_ihome_publisher"
+            style="@style/Body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.75"/>
+            android:text="@{book.publisher}"
+            app:layout_constraintStart_toEndOf="@id/text_ihome_label_publisher"
+            app:layout_constraintTop_toTopOf="@id/text_ihome_label_publisher"
+            tools:text="최광현"/>
+
+        <TextView
+            android:id="@+id/text_ihome_label_price"
+            style="@style/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_ihome_label_price"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            app:layout_constraintTop_toBottomOf="@+id/text_ihome_label_publisher"/>
+
+        <TextView
+            android:id="@+id/text_ihome_price"
+            style="@style/Body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{book.price}"
+            app:layout_constraintStart_toEndOf="@id/text_ihome_label_publisher"
+            app:layout_constraintTop_toTopOf="@id/text_ihome_label_price"
+            tools:text="15000원"/>
+
+        <View
+            android:id="@+id/view_ihome_divider"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_ihome_label_price"
+            android:background="#373737"/>
+
+        <TextView
+            android:id="@+id/text_ihome_desc"
+            style="@style/Description"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/view_ihome_divider"
+            app:layout_constraintBottom_toBottomOf="@id/img_ihome"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            app:layout_constraintEnd_toEndOf="parent"
+            bind:descriptionFilter="@{book.description}"
+            tools:text="미움 받을 용기입니다."/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </androidx.cardview.widget.CardView>
 </layout>
