feat: add BookDatabase with Room

--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="book"
-            type="com.example.mylibrary.data.dto.response.Book" />
+            type="com.example.mylibrary.data.dto.response.BookInfo" />
     </data>
 
     <androidx.cardview.widget.CardView
