--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -14,27 +14,18 @@
             type="android.view.View.OnClickListener" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_ihome_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
-
     <androidx.cardview.widget.CardView
         android:id="@+id/card_ihome_innercontainer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:contentPadding="24dp"
-        app:cardCornerRadius="8dp">
-
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/motion_ihome_innercontainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutDescription="@xml/item_home_scene">
+        android:layout_margin="24dp"
+        app:contentPadding="16dp"
+        app:cardCornerRadius="8dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/motion_ihome_innercontainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/img_ihome"
@@ -57,13 +48,33 @@
             tools:text="미움 받을 용기"/>
 
         <TextView
+            android:id="@+id/text_ihome_label_author"
+            style="@style/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_ihome_label_author"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            app:layout_constraintTop_toBottomOf="@id/text_ihome_title"/>
+
+        <TextView
+            style="@style/Body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{book.author}"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintStart_toEndOf="@id/text_ihome_label_publisher"
+            app:layout_constraintTop_toTopOf="@id/text_ihome_label_author"
+            tools:text="최광현"/>
+
+        <TextView
             android:id="@+id/text_ihome_label_publisher"
             style="@style/Label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_ihome_label_publisher"
             app:layout_constraintStart_toEndOf="@id/img_ihome"
-            app:layout_constraintTop_toBottomOf="@id/text_ihome_title"/>
+            app:layout_constraintTop_toBottomOf="@id/text_ihome_label_author"/>
 
         <TextView
             android:id="@+id/text_ihome_publisher"
@@ -73,7 +84,7 @@
             android:text="@{book.publisher}"
             app:layout_constraintStart_toEndOf="@id/text_ihome_label_publisher"
             app:layout_constraintTop_toTopOf="@id/text_ihome_label_publisher"
-            tools:text="최광현"/>
+            tools:text="산기대"/>
 
         <TextView
             android:id="@+id/text_ihome_label_price"
@@ -94,6 +105,29 @@
             bind:textPrice="@{book.price}"
             tools:text="15000원" />
 
+        <TextView
+            android:id="@+id/text_ihome_link"
+            style="@style/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_ihome_link"
+            android:onClick="@{onClickItem}"
+            app:layout_constraintTop_toBottomOf="@id/text_ihome_label_price"
+            app:layout_constraintStart_toEndOf="@id/img_ihome"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_ihome_bookmark"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="@{onClickItem}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/view_ihome_divider"
+            app:lottie_autoPlay="false"
+            app:lottie_loop="false"
+            app:lottie_rawRes="@raw/bookmark"
+            bind:checkBookMark="@{book.isBookMark()}"
+            tools:src="@drawable/ic_home"/>
+
         <View
             android:id="@+id/view_ihome_divider"
             android:layout_width="0dp"
@@ -101,39 +135,20 @@
             android:layout_marginStart="12dp"
             app:layout_constraintStart_toEndOf="@id/img_ihome"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_ihome_label_price"
+            app:layout_constraintBottom_toBottomOf="@id/img_ihome"
             android:background="#373737"/>
 
         <TextView
             android:id="@+id/text_ihome_desc"
             style="@style/Description"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            app:layout_constraintTop_toBottomOf="@id/view_ihome_divider"
-            app:layout_constraintStart_toEndOf="@id/img_ihome"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/img_ihome"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             bind:textDescription="@{book.description}"
             tools:text="미움 받을 용기입니다."/>
 
-        <TextView
-            android:id="@+id/text_ihome_desc_full"
-            style="@style/DescriptionFull"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:alpha="0"
-            bind:textDescription="@{book.description}"/>
-
-    </androidx.constraintlayout.motion.widget.MotionLayout>
-    </androidx.cardview.widget.CardView>
-        <Button
-            android:id="@+id/test"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:onClick="@{onClickItem}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:backgroundTint="@color/black" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
