--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,14 @@
         <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="Link">
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <style name="Title">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
@@ -26,11 +34,7 @@
     </style>
 
     <style name="Description">
-        <item name="android:paddingStart">16dp</item>
-        <item name="android:paddingEnd">16dp</item>
         <item name="android:paddingTop">12dp</item>
-        <item name="android:maxLines">2</item>
-        <item name="android:ellipsize">end</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
