--- a/app/src/main/res/layout/item_user_book.xml
+++ b/app/src/main/res/layout/item_user_book.xml
@@ -16,12 +16,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_user_container"
+        android:id="@+id/constraint_iuserbook_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/card_iuser_innercontainer"
+            android:id="@+id/card_iuserbook_innercontainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
@@ -30,12 +30,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraint_iuser_innercontainer"
+                android:id="@+id/constraint_iuserbook_innercontainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/img_iuser"
+                    android:id="@+id/img_iuserbook"
                     android:layout_width="108dp"
                     android:layout_height="144dp"
                     android:background="@color/black"
@@ -44,7 +44,7 @@
                     bind:imageBook="@{book.image}" />
 
                 <TextView
-                    android:id="@+id/text_iuser_title"
+                    android:id="@+id/text_iuserbook_title"
                     style="@style/DescriptionFull"
                     android:layout_width="0dp"
                     android:layout_height="64dp"
@@ -53,7 +53,7 @@
                     android:maxLines="2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_iuser"
+                    app:layout_constraintTop_toBottomOf="@id/img_iuserbook"
                     bind:textTitle="@{book.title}"
                     tools:text="달을 닮은 너에게" />
 
@@ -61,15 +61,15 @@
         </androidx.cardview.widget.CardView>
 
         <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lottie_ihome_bookmark"
+            android:id="@+id/lottie_iuserbook_bookmark"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:elevation="2dp"
             android:onClick="@{onClickItem}"
-            app:layout_constraintBottom_toBottomOf="@id/card_iuser_innercontainer"
-            app:layout_constraintStart_toEndOf="@id/card_iuser_innercontainer"
-            app:layout_constraintEnd_toEndOf="@id/card_iuser_innercontainer"
-            app:layout_constraintTop_toBottomOf="@id/card_iuser_innercontainer"
+            app:layout_constraintBottom_toBottomOf="@id/card_iuserbook_innercontainer"
+            app:layout_constraintStart_toEndOf="@id/card_iuserbook_innercontainer"
+            app:layout_constraintEnd_toEndOf="@id/card_iuserbook_innercontainer"
+            app:layout_constraintTop_toBottomOf="@id/card_iuserbook_innercontainer"
             app:layout_constraintVertical_bias="1.0"
             app:lottie_autoPlay="false"
             app:lottie_loop="false"
