--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,11 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="BottomSheetHead" parent="android:TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="Description">
         <item name="android:paddingTop">12dp</item>
         <item name="android:textSize">12sp</item>
