--- a/app/src/main/res/layout/item_user_book.xml
+++ b/app/src/main/res/layout/item_user_book.xml
@@ -13,6 +13,10 @@
         <variable
             name="onClickItem"
             type="android.view.View.OnClickListener" />
+
+        <variable
+            name="onLongClickItem"
+            type="android.view.View.OnLongClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,6 +29,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
+            style="@style/RippleEffect"
+            android:onClick="@{onClickItem}"
+            android:onLongClick="@{onLongClickItem}"
             app:contentPadding="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -54,7 +61,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/img_iuserbook"
-                    bind:textTitle="@{book.title}"
+                    bind:searchText="@{book.title}"
                     tools:text="달을 닮은 너에게" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
