--- a/app/src/main/res/drawable/edit_text_background.xml
+++ b/app/src/main/res/drawable/edit_text_background.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#EFEFEF"/>
-            <corners android:radius="8dp" />
+            <solid android:color="@color/edit_background"/>
+
             <stroke
                 android:width="1dp"
-                android:color="#DFDFDF" />
+                android:color="@color/edit_background_stroke" />
         </shape>
     </item>
 </selector>
