--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginHorizontal="12dp"
-                    android:background="@drawable/edit_search"
+                    android:background="@drawable/edit_search_background"
                     android:orientation="horizontal">
 
                     <ImageView
