--- a/app/src/main/res/layout/dlg_delete_category.xml
+++ b/app/src/main/res/layout/dlg_delete_category.xml
@@ -1,52 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    android:id="@+id/constraint_dlg_delete_category_container"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_dlg_delete_category_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       >
+    <TextView
+        android:id="@+id/text_dlg_delete_category_title"
+        style="@style/BottomSheetHead"
+        android:text="@string/text_dlg_delete_category_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/text_dlg_delete_category_title"
-            style="@style/BottomSheetHead"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="24dp"
-            android:text="@string/text_dlg_delete_category_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/text_dlg_delete_cancel"
+        style="@style/BottomSheetButton"
+        android:text="취소"
+        app:layout_constraintEnd_toStartOf="@id/text_dlg_delete_confirm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_dlg_delete_category_title" />
 
-        <TextView
-            android:id="@+id/text_dlg_delete_cancel"
-            style="@style/RippleEffect"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="취소"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/text_dlg_delete_confirm"
-            app:layout_constraintTop_toBottomOf="@id/text_dlg_delete_category_title"/>
-        
-        <TextView
-            android:id="@+id/text_dlg_delete_confirm"
-            style="@style/RippleEffect"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:text="확인"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="@id/text_dlg_delete_cancel"
-            app:layout_constraintStart_toEndOf="@id/text_dlg_delete_cancel"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        
+    <TextView
+        android:id="@+id/text_dlg_delete_confirm"
+        style="@style/BottomSheetButton"
+        android:text="확인"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/text_dlg_delete_cancel"
+        app:layout_constraintTop_toTopOf="@id/text_dlg_delete_cancel" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
