--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -19,13 +19,8 @@
 
     <TextView
         android:id="@+id/text_edit_category_add"
-        style="@style/RippleEffect"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:padding="24dp"
+        style="@style/AddText"
         android:text="@string/text_user_add"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/recycler_edit_category_category"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/recycler_edit_category_category"
