--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,28 @@
         <item name="android:foreground">?attr/selectableItemBackground</item>
     </style>
 
+    <style name="AddText">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">24dp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="BottomSheetButton">
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="Label">
         <item name="android:paddingStart">16dp</item>
         <item name="android:paddingEnd">8dp</item>
@@ -36,15 +58,13 @@
     <style name="BottomSheetHead" parent="android:TextAppearance">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:layout_width">240dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">24dp</item>
     </style>
 
     <style name="Description">
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-
-    <style name="DescriptionFull">
         <item name="android:paddingTop">12dp</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/black</item>
