--- a/app/src/main/res/layout/dlg_create_category.xml
+++ b/app/src/main/res/layout/dlg_create_category.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/constraint_dlg_create_category_container"
+    android:padding="36dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
