--- a/app/src/main/res/layout/dlg_delete_category.xml
+++ b/app/src/main/res/layout/dlg_delete_category.xml
@@ -9,6 +9,7 @@
         android:id="@+id/text_dlg_delete_category_title"
         style="@style/BottomSheetHead"
         android:text="@string/text_dlg_delete_category_title"
+        android:paddingTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -16,7 +17,7 @@
     <TextView
         android:id="@+id/text_dlg_delete_cancel"
         style="@style/BottomSheetButton"
-        android:text="취소"
+        android:text="@string/text_dlg_delete_cancel"
         app:layout_constraintEnd_toStartOf="@id/text_dlg_delete_confirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_dlg_delete_category_title" />
@@ -24,7 +25,7 @@
     <TextView
         android:id="@+id/text_dlg_delete_confirm"
         style="@style/BottomSheetButton"
-        android:text="확인"
+        android:text="@string/text_dlg_delete_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/text_dlg_delete_cancel"
         app:layout_constraintTop_toTopOf="@id/text_dlg_delete_cancel" />
