feat: select status in fragment_root

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
 
     <color name="gray">#8c8c8c</color>
     <color name="divider">#EFEFEF</color>
+    <color name="selected">#389281</color>
     <color name="background">#F6F6F6</color>
     <color name="edit_background">#EFEFEF</color>
     <color name="edit_background_stroke">#DFDFDF</color>
